# ViennaPS

examples/DRAMWiggling/: DRAMWiggling.py
examples/boschProcess/: boschProcessRayTracing.py
examples/exposureOptimization/: CMakeLists.txt  exposureOptimization.cpp
examples/holeEtching/: holeEtching.py  testFluxes.py
examples/holeEtching/44/: config.txt
examples/holeEtching/50/: config.txt
examples/holeEtching/56/: config.txt
examples/holeEtching/62/: config.txt
examples/trenchDeposition/: trenchDeposition.py
gpu/include/models/: psgFluorocarbonEtching.hpp  psgTEOSPECVD.hpp
gpu/include/pipelines/: FluorocarbonPipeline.cu
include/viennaps/gds/: psGDSGeometry.hpp
include/viennaps/models/: psFluorocarbonEtching.hpp  psFluorocarbonParameters.hpp  psSF6O2Etching.hpp  psTEOSPECVD.hpp
python/: pyWrap.cpp
